targets/sol/k3s/logtfy/logtfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logtfy
  namespace: monitoring
  labels:
    app: logtfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logtfy
  template:
    metadata:
      labels:
        app: logtfy
    spec:
      hostname: ${TARGET}
      serviceAccountName: logtfy-service-account
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: logtfy
          image: imranrdev/logtfy:latest@sha256:3750795017ca552f22e3b8028b6c8e0d9f0ca85b5bb5ae3f8e324e8c767d4088
          volumeMounts:
            - name: journal
              mountPath: /var/log/journal
              readOnly: true
            - name: config
              mountPath: /logtfy/config.json
              subPath: logtfy.json
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
      volumes:
        - name: journal
          persistentVolumeClaim:
            claimName: logtfy-journal-pvc
        - name: config
          secret:
            secretName: logtfy-config
            items:
              - key: logtfy.json
                path: logtfy.json
